salesU/k8s/pingfederate/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate-admin
  labels:
    app: pingfederate-admin
    tier: admin
spec:
  replicas: 1
  selector:
      matchLabels:
        app: pingfederate-admin
        tier: admin
  template:
    metadata:
      labels:
        app: pingfederate-admin
        tier: admin
    spec:
      containers:
      - name: console-node
        image: gcr.io/ping-identity/pingfederate:10.0.0-centos-edge-arno-update-10.0.0-b9851707
        ports:
        - containerPort: 9999
        - containerPort: 7600
        resources:
          requests:
            memory: "2.5Gi"
            cpu: "2"
          limits:
            memory: "2.5Gi"
            cpu: "2"
