salesU/k8s/pingfederate/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingfederate-admin
  labels:
    app: pingfederate-admin
    tier: admin
spec:
  ports:
  #NOTE: external port is 443 now
  - port: 9999
    protocol: TCP
    # targetPort: 9999
  selector:
    app: pingfederate-admin
    tier: admin
  sessionAffinity: None
  # type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: pf-cluster-dns
  labels:
    app: pingfederate-admin
    tier: admin
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: bind-port
      port: 7600
      protocol: TCP
      targetPort: 7600
  selector:
     app: pingfederate-admin
     tier: admin
